# superparticle

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
resources.out/shaders/: main.frag.spv  main.vert.spv
resources/shaders/: main.compute  main.frag  main.vert
src/: main.rs  renderer.rs  state.rs
