[package]
name = "superparticle"
version = "0.1.0"
authors = ["AmaranthineCodices <git@amaranthinecodices.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "0.1.1"
cgmath = "0.17"
futures = "0.3.5"
hecs = "0.2.12"
image = { version = "0.23.4", default-features = false, features = [ "png" ] }
log = "0.4"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
wgpu = "^0.6.2"
winit = "0.22.1"

[build-dependencies]
shaderc = "0.6.2"